--- a/Notes/学习进度.md
+++ b/Notes/学习进度.md
@@ -313,6 +313,54 @@ function App() {
 
 ### 在frontend/src/目录下创建了components文件夹/Profile
 
+## 4-19 个人主页(User Profiles)
+
+
+
 46:08
 
 53:00
+
+### 使用Redux来进行项目的状态管理
+
+如果你在使用 JavaScript 或 TypeScript 编写应用程序，并且希望使用 Redux 进行状态管理，但找不到 `@reduxjs/toolkit` 这个模块，可以尝试以下几个步骤来解决问题：
+
+1. **安装 Redux**: 首先确保你已经安装了 Redux。你可以使用 npm 或者 yarn 安装 Redux：
+   ```bash
+   npm install redux
+   # 或者
+   yarn add redux
+   ```
+
+2. **安装 Redux Toolkit**: 如果你希望使用 Redux Toolkit 提供的更方便的 API 和工具集，你需要安装 `@reduxjs/toolkit`：
+   ```bash
+   npm install @reduxjs/toolkit
+   # 或者
+   yarn add @reduxjs/toolkit
+   ```
+
+3. **检查依赖**: 确保你的项目配置正确，可以访问到 npm 或 yarn 的 registry，并且没有网络或权限问题。
+
+4. **检查包管理器配置**: 如果你使用的是公司内部的包管理器或者私有 registry，确保你的配置允许安装 `@reduxjs/toolkit`。
+
+5. **更新依赖**: 如果已经安装了 Redux，但是无法安装 Redux Toolkit，可以尝试更新你的依赖版本，以确保你使用的是最新的稳定版本。
+
+通过这些步骤，你应该能够解决无法找到 `@reduxjs/toolkit` 的问题，并成功使用 Redux Toolkit 进行状态管理。
+
+### Redux的作用
+
+`@reduxjs/toolkit` 是 Redux 官方提供的一个工具包，旨在简化 Redux 的开发流程并提供一组约定的最佳实践。它主要包括以下几个方面的功能和优点：
+
+1. **Redux 核心工具**: 提供了 Redux 核心 API 的封装和简化，包括 `createSlice`、`configureStore` 等，减少了样板代码的编写。
+
+2. **约定优于配置**: Redux Toolkit 引入了一些约定，帮助开发者编写更少的代码来完成常见的 Redux 模式，如减少手动编写的 Action Types、Reducers 和 Action Creators。
+
+3. **Immer 支持**: 使用 Immer 库来实现不可变更新的状态，使得 Reducer 编写更加简洁和直观。
+
+4. **集成 Redux DevTools Extension**: 默认集成了 Redux DevTools Extension，提供了强大的状态管理和调试工具。
+
+5. **默认配置的 store**: 使用 `configureStore` 可以轻松创建一个预配置的 Redux store，包括 middleware、serializers 等。
+
+6. **性能优化**: Redux Toolkit 在内部处理了一些性能优化，如避免不必要的重新渲染和重新计算，以提升应用程序的性能表现。
+
+总体来说，`@reduxjs/toolkit` 提供了一种更简单、更高效的方式来使用 Redux 进行状态管理，特别适合于中大型应用的开发。它旨在降低学习曲线，并且帮助开发者遵循 Redux 的最佳实践，使得代码更加清晰和易于维护。
