--- a/Notes/学习进度.md
+++ b/Notes/学习进度.md
@@ -364,3 +364,26 @@ function App() {
 6. **性能优化**: Redux Toolkit 在内部处理了一些性能优化，如避免不必要的重新渲染和重新计算，以提升应用程序的性能表现。
 
 总体来说，`@reduxjs/toolkit` 提供了一种更简单、更高效的方式来使用 Redux 进行状态管理，特别适合于中大型应用的开发。它旨在降低学习曲线，并且帮助开发者遵循 Redux 的最佳实践，使得代码更加清晰和易于维护。
+
+1：18：00
+
+**24/June/2024**
+
+` <div key={${index}-${post.userID}}>`
+
+- 这一行代码是在React中创建列表元素时使用的一种方法，旨在为每个元素指定一个独一无二的标识（即`key`属性）。这种标识对于React来说非常重要，因为它帮助React理解列表中哪些元素在更新时发生了变化，从而有效地进行必要的更新，而不是重建整个列表。
+
+  ### key属性的作用
+  当你在React应用中显示一组元素（比如一列帖子）时，React需要一种方式来识别每个元素的身份，以便它在数据变更后可以智能地更新界面。这就是`key`属性的作用。如果没有`key`，React可能会错乱，导致效率低下的更新，甚至错误。
+
+  ### 代码解释
+  - `<div key={`${index}-${post.userID}`}>`：这行代码中，`<div>`是一个简单的容器。`key`是它的一个特殊属性，用于告诉React这个容器在列表中的唯一标识。
+  - `${index}-${post.userID}`：这里使用了模板字符串（一种在字符串中嵌入变量的方法）来构造一个独特的键。`index`是当前元素在列表中的位置编号，而`post.userID`可能是一个用户的ID。通过组合这两者，形成一个既包含位置信息也包含用户信息的唯一标识，即使列表的内容或顺序变化，React也能准确地知道每个元素的具体变动。
+
+  ### 使用场景
+  假设你正在创建一个显示用户帖子的应用，每个帖子由一个用户提交。如果只用用户ID作为`key`，而这个ID在不同帖子中可能重复，就无法确保唯一性。所以这里通过将位置索引和用户ID结合起来，形成了一个即使在多个用户提交多个帖子的情况下也能保持唯一的键。
+
+  总之，这种做法帮助React在数据更新时，能够准确且高效地处理界面的变化，从而提升应用的性能和用户体验。
+
+Finished 4-19
+
