finished node.express-1
完成node.js-2

--- a/学习进度/学习进度.md
+++ b/学习进度/学习进度.md
@@ -626,7 +626,7 @@ const [todolist, setTodolist] = useState(['hello', 'world']);
 6. **默认导出**：
    - 只支持默认导出，不支持命名导出。
 
-### 主要区别总结：
+**主要区别总结：**
 
 - **语法和导入方式**：ES module 使用 `import/export`，CommonJS 使用 `require/module.exports`。
 - **加载方式**：ES module 支持异步加载和静态解析，CommonJS 是同步加载和动态解析。
@@ -671,3 +671,12 @@ console.log(firstLetter); // 输出 "H"
 在你的代码中，`word.charAt(0)` 被用来获取每个单词 `word` 的第一个字母，然后将这些字母组成一个新的字符串，最终构成了 `initials` 数组中的每个元素。
 
 完成这个视频node.js的学习
+
+
+
+## Node.js Express.js
+
+Aug 23 2024
+
+完成该视频的学习
+
