User-Authenticate-2-完成
后端连接数据库，前端连接后端API

--- a/学习进度/学习进度.md
+++ b/学习进度/学习进度.md
@@ -727,3 +727,11 @@ Sep 22 完成该视频的学习
 Sep 24 学习到1:13， 这个React视频和路由相关
 
 Sep 29 完成该视频的学习，后半部分主要介绍了Form 和使用ajv框架来进行data-validation
+
+## Node.js - User-Authenticate-2
+
+Oct 1 学习完成
+
+Backend 后端连接数据库，前端连接后端API接口
+
+这个文件 [`apiConfig.js`](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 主要用于配置和管理与后端 API 的 HTTP 请求。它使用了 [`axios`](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 库来创建一个预配置的 [`axios`](vscode-file://vscode-app/Applications/Visual Studio Code.app/Contents/Resources/app/out/vs/code/electron-sandbox/workbench/workbench.html) 实例，并提供了一个函数来设置或删除请求头中的授权令牌。
